# dotfiles

./: .gitignore  .gitmodules  INSTALL.sh  LICENSE  OpenSCAD.conf  QuiteRss.ini  README.md  Renviron  WindowsTerminal.json  Xresources  _XDG  asoundrc  autostart.sh  bash_profile  bashrc  chktexrc  commafeed.yml  cshrc  dosbox.conf  env_variables  fonts.conf  fzf.sh  gdbinit  grip.py  gtkrc-2.0  htoprc  inputrc  install.sh  link.sh  linking.sh  mimeapps.list  muttrc  myclirc  newsboat  pam_environment  polybar  profile  python_config.py  ranger.conf  setup.sh  (+17 more)
AutoHotkey/: firefox.ahk
FreshRSS/: start.sh
UserScripts/: _tweaks.user.js  _tweaks_.user.js
WSL/: .wslgconfig  WindowsTerminal.json
Windows/: wsl-shared-home.service
X11/: Xresources  xinitrc
_XDG/: chmod_wrappers.sh  env_variables  fakehome.list  install.sh  profile_xdg.sh  variables
_patch/: ssh_autopass.sh  xdg_wrapper.sh
aerc/: aerc.conf  binds.conf  external-browser
app.desktop.d/: nvidia-settings.desktop  pavucontrol.desktop  simplescreenrecorder.desktop  spice.desktop  toggle-xbox.desktop
autostart/: 000_check.sh  020_basics.sh  020_small_things.sh  050_prime.sh  100_startx.sh  20_basics.sh  99_startx.sh
bash/: bash_profile  bashrc  completion
config/: OpenSCAD.conf  PowerShell.ps1  QuiteRss.ini  asoundrc  commafeed.yml  cshrc  deno.json  dosbox.conf  fonts.conf  gdbinit  gtk3-settings.ini  gtkrc-2.0  htoprc  lesskey  mailcap  mimeapps.list  muttrc  myclirc  pavucontrol.ini  polybar.ini  python_config.py  qt5ct.conf  shellcheckrc  telnetrc  tigrc  transmission.json  vimium-options.json  wslconfig
ctags/: gdscript.ctags  vb.ctags
desktop_entries/: kanjitomo.desktop  steam-native.desktop  steam.desktop  steam_real.desktop
env/: _XDG_variables  pam  profile  user-dirs.dirs  variables  xdg_profile.sh
etc/: wsl.conf
feh/: keys  themes
firefox/: user.js  userChrome.css  userContent.css  vimium-options.json
fish/: config.fish  fish_variables
fonts/: .uuid
git/: config  gitconfig  ignore
gtk/: gtk3_settings.ini  gtkrc-2.0
i3/: config  i3blocks
misc/: vimium-options.json
mpv/: input.conf  mpv.conf
mutt/: mailcap  muttrc
newsboat/: config  queries
templates/cmake-project/: CMakeLists.txt
templates/cmake-project/docs/: CMakeLists.txt
templates/cmake-project/src/: CMakeLists.txt  main.cpp
(+753 files in other folders)
